Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <title>Da Família Lanches - Cardápio Digital</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./promocoes.css">
+  <link rel="stylesheet" href="promocoes.css">
 </head>
-
 <body>
   <!-- Header -->
   <header class="header">
     <div class="header-content">
       <div class="logo-container">
-        <img src="./logo.png" alt="Logo Da Família Lanches">
+        <img src="logo.png" alt="Logo Da Família Lanches">
       </div>
       <div class="header-info">
         <h1>Da Família Lanches</h1>
@@ -42,52 +41,32 @@
     </div>
   </section>
 
-  <!-- Carrossel de Promoções -->
+  <!-- Carousel de Promoções -->
   <section class="carousel-section">
     <div class="promo-header">
       <h2>Confira as Promoções de Hoje</h2>
       <p class="promo-subtitle">Estoque limitado • Poucas unidades disponíveis</p>
     </div>
-
     <div class="carousel-container">
       <div class="carousel-slides">
-        <div class="carousel-slide-link" data-index="0">
-          <img src="./promo1.jpg" class="carousel-slide" alt="Promoção 1">
-        </div>
-        <div class="carousel-slide-link" data-index="1">
-          <img src="./promo2.jpg" class="carousel-slide" alt="Promoção 2">
-        </div>
-        <div class="carousel-slide-link" data-index="2">
-          <img src="./promo3.jpg" class="carousel-slide" alt="Promoção 3">
-        </div>
-        <div class="carousel-slide-link" data-index="3">
-          <img src="./promo4.jpg" class="carousel-slide" alt="Promoção 4">
-        </div>
-        <div class="carousel-slide-link" data-index="4">
-          <img src="./promo5.jpg" class="carousel-slide" alt="Promoção 5">
-        </div>
-        <div class="carousel-slide-link" data-index="5">
-          <img src="./promo6.jpg" class="carousel-slide" alt="Promoção 6">
-        </div>
-        <div class="carousel-slide-link" data-index="6">
-          <img src="./promo7.jpg" class="carousel-slide" alt="Promoção 7">
-        </div>
-        <div class="carousel-slide-link" data-index="7">
-          <img src="./promo8.jpg" class="carousel-slide" alt="Promoção 8">
-        </div>
-        <div class="carousel-slide-link" data-index="8">
-          <img src="./promo9.jpg" class="carousel-slide" alt="Promoção 9">
-        </div>
+        <div><img src="promo1.jpg" alt="Promoção 1"></div>
+        <div><img src="promo2.jpg" alt="Promoção 2"></div>
+        <div><img src="promo3.jpg" alt="Promoção 3"></div>
+        <div><img src="promo4.jpg" alt="Promoção 4"></div>
+        <div><img src="promo5.jpg" alt="Promoção 5"></div>
+        <div><img src="promo6.jpg" alt="Promoção 6"></div>
+        <div><img src="promo7.jpg" alt="Promoção 7"></div>
+        <div><img src="promo8.jpg" alt="Promoção 8"></div>
+        <div><img src="promo9.jpg" alt="Promoção 9"></div>
       </div>
-      <div class="countdown-timer">
-        <p>Promoções encerram em: <span id="timer">00:00:00</span></p>
-      </div>
+    </div>
+    <div class="countdown-timer">
+      <p>Promoções encerram em: <span id="timer">00:00:00</span></p>
     </div>
   </section>
 
   <!-- Menu Principal -->
   <main class="menu-container">
-
     <!-- Hambúrgueres Tradicionais -->
     <section class="menu-section">
       <h2>Hambúrgueres Tradicionais</h2>
@@ -110,7 +89,7 @@
         <div class="product-card">
           <h3>CADIM</h3>
           <div class="price">R$ 17,00</div>
-          <div class="description">Pão, milé frango, bacon, milho, batata palha e mussarela</div>
+          <div class="description">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</div>
         </div>
         <div class="product-card">
           <h3>ARMARIA</h3>
@@ -120,29 +99,12 @@
         <div class="product-card">
           <h3>BITELA</h3>
           <div class="price">R$ 22,00</div>
-          <div class="description">Pão, 2 hambúrguer, filé frango, bacon, milho, batata palha, 2 salsicha, presunto e mussarela</div>
+          <div class="description">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</div>
         </div>
         <div class="product-card">
           <h3>APRUMA</h3>
           <div class="price">R$ 25,00</div>
-          <div class="description">Pão, 2 hambúrguer artesanal, 2 filé frango, bacon, milho, batata palha e cheddar</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Burgers Especiais -->
-    <section class="menu-section">
-      <h2>Burgers Especiais</h2>
-      <div class="products-grid">
-        <div class="product-card">
-          <h3>GRADICIDO</h3>
-          <div class="price">R$ 28,00</div>
-          <div class="description">Pão, 3 hambúrguer, filé frango, bacon, ovo, 1 salsicha, milho, batata palha, alface, tomate, 2 presunto e 2 mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>VARADIFOME</h3>
-          <div class="price">R$ 30,00</div>
-          <div class="description">Pão, 4 hambúrguer, filé frango, bacon, ovo, cheddar, milho, batata palha, 2 salsicha, alface, tomate, presunto e mussarela</div>
+          <div class="description">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</div>
         </div>
       </div>
     </section>
@@ -159,12 +121,12 @@
         <div class="product-card">
           <h3>TUDIBOM</h3>
           <div class="price">R$ 28,50</div>
-          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrguer artesanal 120g, filé de frango, presunto e mussarela</div>
+          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela</div>
         </div>
         <div class="product-card">
           <h3>CUSTOSO</h3>
           <div class="price">R$ 31,00</div>
-          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrguer artesanal 120g, filé de frango, cheddar cremoso, 2 presunto e 2 mussarela</div>
+          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso e presunto</div>
         </div>
       </div>
     </section>
@@ -210,26 +172,23 @@
         <div class="product-card"><h3>Coca-Cola 2L</h3><div class="price">R$ 13,00</div></div>
       </div>
     </section>
-
   </main>
 
   <!-- Onde Estamos -->
   <section class="location-section">
     <h2>Onde Estamos</h2>
     <div class="location-content">
-      <div class="location-info">
-        <p><strong>Endereço:</strong> Rua dos Caiçaras, 212 - Caramurus</p>
-        <p><strong>Telefone:</strong> <a href="tel:+5534997178336">(34) 9.9717-8336</a></p>
-      </div>
-      <div class="location-map">
-        <a href="https://www.google.com/maps/search/Rua+dos+Caiçaras,+212+-+Caramuru" target="_blank">📍 Ver no Google Maps</a>
-      </div>
+      <p><strong>Endereço:</strong> Rua dos Caiçaras, 212 - Caramurus</p>
+      <p><strong>Telefone:</strong> <a href="tel:+5534997178336">(34) 9 9717-8336</a></p>
+      <a href="https://www.google.com/maps/search/Rua+dos+Caiçaras,+212+Caramurus" target="_blank" class="cta-button">📍 Ver no Google Maps</a>
     </div>
   </section>
 
-  <!-- Call-to-Action -->
+  <!-- Botão de Pedido -->
   <section class="cta-section">
-    <a href="https://wa.me/5534997178336?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20gostaria%20de%20fazer%20um%20pedido!" target="_blank" class="cta-button">Fazer Pedido Agora</a>
+    <a href="https://wa.me/5534997178336?text=Olá!%20Vi%20pelo%20seu%20site%20e%20gostaria%20de%20fazer%20um%20pedido" class="cta-button" target="_blank">
+      Fazer Pedido Agora
+    </a>
   </section>
 
   <!-- Footer -->
@@ -238,6 +197,6 @@
   </footer>
 
   <!-- Script -->
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
