--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Da Família Lanches - Cardápio Digital</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Da Família Lanches - Cardápio Oficial 🍔</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="promocoes.css">
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!-- Header -->
   <header class="header">
     <div class="header-content">
       <div class="logo-container">
-        <img src="logo.png" alt="Logo Da Família Lanches">
+        <img src="logo.png" alt="DFL - Da Família Lanches" class="logo" />
       </div>
       <div class="header-info">
         <h1>Da Família Lanches</h1>
@@ -31,172 +32,175 @@
         <span class="hora">18h00 - 23h15</span>
       </div>
       <div class="horario-item">
-        <span class="dia">Terça</span>
-        <span class="hora">Fechado</span>
-      </div>
-      <div class="horario-item">
         <span class="dia">Sexta, Sábado e Domingo</span>
         <span class="hora">17h30 - 23h30</span>
+      </div>
+      <div class="horario-item">
+        <span class="dia">Terça</span>
+        <span class="hora">Fechado</span>
       </div>
     </div>
   </section>
 
-  <!-- Carousel de Promoções -->
-  <section class="carousel-section">
+  <!-- Promoções -->
+  <section class="promo-section">
     <div class="promo-header">
       <h2>Confira as Promoções de Hoje</h2>
       <p class="promo-subtitle">Estoque limitado • Poucas unidades disponíveis</p>
     </div>
+
+    <div class="countdown-timer">
+      Promoções encerram em: <span id="timer">00:00:00</span>
+    </div>
+
     <div class="carousel-container">
       <div class="carousel-slides">
-        <div><img src="promo1.jpg" alt="Promoção 1"></div>
-        <div><img src="promo2.jpg" alt="Promoção 2"></div>
-        <div><img src="promo3.jpg" alt="Promoção 3"></div>
-        <div><img src="promo4.jpg" alt="Promoção 4"></div>
-        <div><img src="promo5.jpg" alt="Promoção 5"></div>
-        <div><img src="promo6.jpg" alt="Promoção 6"></div>
-        <div><img src="promo7.jpg" alt="Promoção 7"></div>
-        <div><img src="promo8.jpg" alt="Promoção 8"></div>
-        <div><img src="promo9.jpg" alt="Promoção 9"></div>
+        <img src="promo1.jpg" alt="2 Purizin + 1 Fanta 1L" class="carousel-slide">
       </div>
-    </div>
-    <div class="countdown-timer">
-      <p>Promoções encerram em: <span id="timer">00:00:00</span></p>
     </div>
   </section>
 
-  <!-- Menu Principal -->
-  <main class="menu-container">
-    <!-- Hambúrgueres Tradicionais -->
-    <section class="menu-section">
-      <h2>Hambúrgueres Tradicionais</h2>
-      <div class="products-grid">
-        <div class="product-card">
-          <h3>BÃO</h3>
-          <div class="price">R$ 11,00</div>
-          <div class="description">Pão, hambúrguer, alface, tomate, presunto e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>UAI</h3>
-          <div class="price">R$ 13,00</div>
-          <div class="description">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>TREM</h3>
-          <div class="price">R$ 14,00</div>
-          <div class="description">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>CADIM</h3>
-          <div class="price">R$ 17,00</div>
-          <div class="description">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>ARMARIA</h3>
-          <div class="price">R$ 18,00</div>
-          <div class="description">Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>BITELA</h3>
-          <div class="price">R$ 22,00</div>
-          <div class="description">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>APRUMA</h3>
-          <div class="price">R$ 25,00</div>
-          <div class="description">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</div>
-        </div>
-      </div>
-    </section>
+  <!-- Menu -->
+  <section class="menu-section">
+    <h2>Hambúrgueres Tradicionais</h2>
+    <div class="products-grid">
 
-    <!-- Hambúrgueres Artesanais -->
-    <section class="menu-section">
-      <h2>Hambúrgueres Artesanais</h2>
-      <div class="products-grid">
-        <div class="product-card">
-          <h3>PELEJA</h3>
-          <div class="price">R$ 26,00</div>
-          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, hambúrguer artesanal 120g, filé de frango, presunto e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>TUDIBOM</h3>
-          <div class="price">R$ 28,50</div>
-          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela</div>
-        </div>
-        <div class="product-card">
-          <h3>CUSTOSO</h3>
-          <div class="price">R$ 31,00</div>
-          <div class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso e presunto</div>
-        </div>
+      <div class="product-card">
+        <h3>BÃO</h3>
+        <p class="price">R$ 11,00</p>
+        <p class="description">Pão, hambúrguer, alface, tomate, presunto e mussarela</p>
       </div>
-    </section>
 
-    <!-- Combos -->
-    <section class="menu-section">
-      <h2>Combos</h2>
-      <div class="products-grid">
-        <div class="product-card">
-          <h3>Combo Casal (Tradicional)</h3>
-          <div class="price"><span class="old-price">De R$ 39,99</span> R$ 34,99</div>
-          <div class="description">2 Burger Trem + 1 Fanta 1L</div>
-        </div>
-        <div class="product-card">
-          <h3>Combo Casal (Artesanal)</h3>
-          <div class="price"><span class="old-price">De R$ 64,99</span> R$ 54,99</div>
-          <div class="description">2 Burger Peleja + 1 Fanta 1L</div>
-        </div>
-        <div class="product-card">
-          <h3>Combo Família (Tradicional)</h3>
-          <div class="price"><span class="old-price">De R$ 79,99</span> R$ 59,99</div>
-          <div class="description">4 Burger Trem + 1 Kuat 2L</div>
-        </div>
-        <div class="product-card">
-          <h3>Combo Família (Artesanal)</h3>
-          <div class="price"><span class="old-price">De R$ 106,99</span> R$ 89,99</div>
-          <div class="description">4 Burger Peleja + 1 Coca 2L</div>
-        </div>
+      <div class="product-card">
+        <h3>UAI</h3>
+        <p class="price">R$ 13,00</p>
+        <p class="description">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela</p>
       </div>
-    </section>
 
-    <!-- Bebidas -->
-    <section class="menu-section">
-      <h2>Bebidas</h2>
-      <div class="products-grid">
-        <div class="product-card"><h3>Coca-Cola 200ml</h3><div class="price">R$ 4,00</div></div>
-        <div class="product-card"><h3>Água com Gás 500ml</h3><div class="price">R$ 4,00</div></div>
-        <div class="product-card"><h3>Coca-Cola 310ml</h3><div class="price">R$ 6,00</div></div>
-        <div class="product-card"><h3>Fanta 1L</h3><div class="price">R$ 9,00</div></div>
-        <div class="product-card"><h3>Coca 1L</h3><div class="price">R$ 9,00</div></div>
-        <div class="product-card"><h3>Coca 1L Zero</h3><div class="price">R$ 9,00</div></div>
-        <div class="product-card"><h3>Kuat 2L</h3><div class="price">R$ 10,00</div></div>
-        <div class="product-card"><h3>Coca-Cola 2L</h3><div class="price">R$ 13,00</div></div>
+      <div class="product-card">
+        <h3>TREM</h3>
+        <p class="price">R$ 14,00</p>
+        <p class="description">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela</p>
       </div>
-    </section>
-  </main>
 
-  <!-- Onde Estamos -->
-  <section class="location-section">
-    <h2>Onde Estamos</h2>
-    <div class="location-content">
-      <p><strong>Endereço:</strong> Rua dos Caiçaras, 212 - Caramurus</p>
-      <p><strong>Telefone:</strong> <a href="tel:+5534997178336">(34) 9 9717-8336</a></p>
-      <a href="https://www.google.com/maps/search/Rua+dos+Caiçaras,+212+Caramurus" target="_blank" class="cta-button">📍 Ver no Google Maps</a>
+      <div class="product-card">
+        <h3>CADIM</h3>
+        <p class="price">R$ 17,00</p>
+        <p class="description">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</p>
+      </div>
+
+      <div class="product-card">
+        <h3>ARMARIA</h3>
+        <p class="price">R$ 18,00</p>
+        <p class="description">Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha e mussarela</p>
+      </div>
+
+      <div class="product-card">
+        <h3>BITELA</h3>
+        <p class="price">R$ 22,00</p>
+        <p class="description">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</p>
+      </div>
+
+      <div class="product-card">
+        <h3>APRUMA</h3>
+        <p class="price">R$ 25,00</p>
+        <p class="description">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</p>
+      </div>
     </div>
   </section>
 
-  <!-- Botão de Pedido -->
-  <section class="cta-section">
-    <a href="https://wa.me/5534997178336?text=Olá!%20Vi%20pelo%20seu%20site%20e%20gostaria%20de%20fazer%20um%20pedido" class="cta-button" target="_blank">
-      Fazer Pedido Agora
-    </a>
+  <!-- Hambúrgueres Artesanais -->
+  <section class="menu-section">
+    <h2>Hambúrgueres Artesanais</h2>
+    <div class="products-grid">
+
+      <div class="product-card">
+        <h3>PELEJA</h3>
+        <p class="price">R$ 26,00</p>
+        <p class="description">Pão, alface, tomate, milho, bacon, batata palha, hambúrguer artesanal 120g, filé frango, presunto e mussarela</p>
+      </div>
+
+      <div class="product-card">
+        <h3>TUDIBOM</h3>
+        <p class="price">R$ 28,50</p>
+        <p class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela</p>
+      </div>
+
+      <div class="product-card">
+        <h3>CUSTOSO</h3>
+        <p class="price">R$ 31,00</p>
+        <p class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso e presunto</p>
+      </div>
+
+    </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Combos -->
+  <section class="menu-section">
+    <h2>Combos</h2>
+    <div class="products-grid">
+
+      <div class="product-card">
+        <h3>Combo Casal (Tradicional)</h3>
+        <p class="old-price">De R$ 39,99</p>
+        <p class="price">R$ 34,99</p>
+        <p class="description">2 Burger Trem + 1 Fanta 1L</p>
+      </div>
+
+      <div class="product-card">
+        <h3>Combo Casal (Artesanal)</h3>
+        <p class="old-price">De R$ 64,99</p>
+        <p class="price">R$ 54,99</p>
+        <p class="description">2 Burger Peleja + 1 Fanta 1L</p>
+      </div>
+
+      <div class="product-card">
+        <h3>Combo Família (Tradicional)</h3>
+        <p class="old-price">De R$ 79,99</p>
+        <p class="price">R$ 59,99</p>
+        <p class="description">4 Burger Trem + 1 Kuat 2L</p>
+      </div>
+
+      <div class="product-card">
+        <h3>Combo Família (Artesanal)</h3>
+        <p class="old-price">De R$ 106,99</p>
+        <p class="price">R$ 89,99</p>
+        <p class="description">4 Burger Peleja + 1 Coca 2L</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Bebidas -->
+  <section class="menu-section">
+    <h2>Bebidas</h2>
+    <div class="products-grid">
+      <div class="product-card">
+        <h3>Coca-Cola 200ml</h3>
+        <p class="price">R$ 4,00</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Rodapé -->
   <footer class="footer">
-    <p>&copy; 2025 Da Família Lanches. Todos os direitos reservados.</p>
+    <p>© 2025 Da Família Lanches — Você faz parte disso!</p>
   </footer>
 
-  <!-- Script -->
-  <script src="script.js"></script>
+  <!-- Script do contador (simples) -->
+  <script>
+    const timer = document.getElementById("timer");
+    function startCountdown(duration) {
+      let time = duration;
+      setInterval(() => {
+        const h = String(Math.floor(time / 3600)).padStart(2, "0");
+        const m = String(Math.floor((time % 3600) / 60)).padStart(2, "0");
+        const s = String(time % 60).padStart(2, "0");
+        timer.textContent = `${h}:${m}:${s}`;
+        if (--time < 0) time = duration;
+      }, 1000);
+    }
+    startCountdown(3600);
+  </script>
 </body>
 </html>
