--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
 
     <div class="carousel-container">
       <div class="carousel-slides">
-        <img src="promo1.jpg" alt="2 Purizin + 1 Fanta 1L" class="carousel-slide">
+        <!-- 🔗 Clique redireciona pro WhatsApp -->
+        <a href="https://wa.me/5534999999999?text=Quero%20aproveitar%20a%20promo%C3%A7%C3%A3o%20de%20hoje!" target="_blank" class="carousel-slide-link active">
+          <img src="promo1.jpg" alt="2 Purizin + 1 Fanta 1L" class="carousel-slide">
+        </a>
+        <a href="https://wa.me/5534999999999?text=Gostei%20do%20Combo%20Casal%20Artesanal!" target="_blank" class="carousel-slide-link">
+          <img src="promo2.jpg" alt="Combo Casal Artesanal" class="carousel-slide">
+        </a>
+        <a href="https://wa.me/5534999999999?text=Quero%20o%20Combo%20Fam%C3%ADlia%20Tradicional!" target="_blank" class="carousel-slide-link">
+          <img src="promo3.jpg" alt="Combo Família Tradicional" class="carousel-slide">
+        </a>
       </div>
     </div>
   </section>
@@ -64,48 +73,13 @@
   <section class="menu-section">
     <h2>Hambúrgueres Tradicionais</h2>
     <div class="products-grid">
-
-      <div class="product-card">
-        <h3>BÃO</h3>
-        <p class="price">R$ 11,00</p>
-        <p class="description">Pão, hambúrguer, alface, tomate, presunto e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>UAI</h3>
-        <p class="price">R$ 13,00</p>
-        <p class="description">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>TREM</h3>
-        <p class="price">R$ 14,00</p>
-        <p class="description">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>CADIM</h3>
-        <p class="price">R$ 17,00</p>
-        <p class="description">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>ARMARIA</h3>
-        <p class="price">R$ 18,00</p>
-        <p class="description">Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>BITELA</h3>
-        <p class="price">R$ 22,00</p>
-        <p class="description">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>APRUMA</h3>
-        <p class="price">R$ 25,00</p>
-        <p class="description">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</p>
-      </div>
+      <div class="product-card"><h3>BÃO</h3><p class="price">R$ 11,00</p><p class="description">Pão, hambúrguer, alface, tomate, presunto e mussarela</p></div>
+      <div class="product-card"><h3>UAI</h3><p class="price">R$ 13,00</p><p class="description">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela</p></div>
+      <div class="product-card"><h3>TREM</h3><p class="price">R$ 14,00</p><p class="description">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela</p></div>
+      <div class="product-card"><h3>CADIM</h3><p class="price">R$ 17,00</p><p class="description">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</p></div>
+      <div class="product-card"><h3>ARMARIA</h3><p class="price">R$ 18,00</p><p class="description">Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha e mussarela</p></div>
+      <div class="product-card"><h3>BITELA</h3><p class="price">R$ 22,00</p><p class="description">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</p></div>
+      <div class="product-card"><h3>APRUMA</h3><p class="price">R$ 25,00</p><p class="description">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</p></div>
     </div>
   </section>
 
@@ -113,25 +87,9 @@
   <section class="menu-section">
     <h2>Hambúrgueres Artesanais</h2>
     <div class="products-grid">
-
-      <div class="product-card">
-        <h3>PELEJA</h3>
-        <p class="price">R$ 26,00</p>
-        <p class="description">Pão, alface, tomate, milho, bacon, batata palha, hambúrguer artesanal 120g, filé frango, presunto e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>TUDIBOM</h3>
-        <p class="price">R$ 28,50</p>
-        <p class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela</p>
-      </div>
-
-      <div class="product-card">
-        <h3>CUSTOSO</h3>
-        <p class="price">R$ 31,00</p>
-        <p class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso e presunto</p>
-      </div>
-
+      <div class="product-card"><h3>PELEJA</h3><p class="price">R$ 26,00</p><p class="description">Pão, alface, tomate, milho, bacon, batata palha, hambúrguer artesanal 120g, filé frango, presunto e mussarela</p></div>
+      <div class="product-card"><h3>TUDIBOM</h3><p class="price">R$ 28,50</p><p class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé frango, presunto e mussarela</p></div>
+      <div class="product-card"><h3>CUSTOSO</h3><p class="price">R$ 31,00</p><p class="description">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé frango, cheddar cremoso e presunto</p></div>
     </div>
   </section>
 
@@ -139,35 +97,10 @@
   <section class="menu-section">
     <h2>Combos</h2>
     <div class="products-grid">
-
-      <div class="product-card">
-        <h3>Combo Casal (Tradicional)</h3>
-        <p class="old-price">De R$ 39,99</p>
-        <p class="price">R$ 34,99</p>
-        <p class="description">2 Burger Trem + 1 Fanta 1L</p>
-      </div>
-
-      <div class="product-card">
-        <h3>Combo Casal (Artesanal)</h3>
-        <p class="old-price">De R$ 64,99</p>
-        <p class="price">R$ 54,99</p>
-        <p class="description">2 Burger Peleja + 1 Fanta 1L</p>
-      </div>
-
-      <div class="product-card">
-        <h3>Combo Família (Tradicional)</h3>
-        <p class="old-price">De R$ 79,99</p>
-        <p class="price">R$ 59,99</p>
-        <p class="description">4 Burger Trem + 1 Kuat 2L</p>
-      </div>
-
-      <div class="product-card">
-        <h3>Combo Família (Artesanal)</h3>
-        <p class="old-price">De R$ 106,99</p>
-        <p class="price">R$ 89,99</p>
-        <p class="description">4 Burger Peleja + 1 Coca 2L</p>
-      </div>
-
+      <div class="product-card"><h3>Combo Casal (Tradicional)</h3><p class="old-price">De R$ 39,99</p><p class="price">R$ 34,99</p><p class="description">2 Burger Trem + 1 Fanta 1L</p></div>
+      <div class="product-card"><h3>Combo Casal (Artesanal)</h3><p class="old-price">De R$ 64,99</p><p class="price">R$ 54,99</p><p class="description">2 Burger Peleja + 1 Fanta 1L</p></div>
+      <div class="product-card"><h3>Combo Família (Tradicional)</h3><p class="old-price">De R$ 79,99</p><p class="price">R$ 59,99</p><p class="description">4 Burger Trem + 1 Kuat 2L</p></div>
+      <div class="product-card"><h3>Combo Família (Artesanal)</h3><p class="old-price">De R$ 106,99</p><p class="price">R$ 89,99</p><p class="description">4 Burger Peleja + 1 Coca 2L</p></div>
     </div>
   </section>
 
@@ -175,10 +108,7 @@
   <section class="menu-section">
     <h2>Bebidas</h2>
     <div class="products-grid">
-      <div class="product-card">
-        <h3>Coca-Cola 200ml</h3>
-        <p class="price">R$ 4,00</p>
-      </div>
+      <div class="product-card"><h3>Coca-Cola 200ml</h3><p class="price">R$ 4,00</p></div>
     </div>
   </section>
 
@@ -187,20 +117,7 @@
     <p>© 2025 Da Família Lanches — Você faz parte disso!</p>
   </footer>
 
-  <!-- Script do contador (simples) -->
-  <script>
-    const timer = document.getElementById("timer");
-    function startCountdown(duration) {
-      let time = duration;
-      setInterval(() => {
-        const h = String(Math.floor(time / 3600)).padStart(2, "0");
-        const m = String(Math.floor((time % 3600) / 60)).padStart(2, "0");
-        const s = String(time % 60).padStart(2, "0");
-        timer.textContent = `${h}:${m}:${s}`;
-        if (--time < 0) time = duration;
-      }, 1000);
-    }
-    startCountdown(3600);
-  </script>
+  <!-- Scripts -->
+  <script src="script.js"></script>
 </body>
 </html>
