--- a/index.html
+++ b/index.html
@@ -2,87 +2,76 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Da Família Lanches — Cardápio Oficial</title>  <!-- ===== CSS EMBUTIDO (para evitar erro de caminho de arquivo) ===== -->  <style>
+  <title>Da Família Lanches — Cardápio Oficial</title>  <!-- ===== CSS EMBUTIDO ===== -->  <style>
     :root{
-      --bg:#0f0f10; --card:#151618; --card-2:#1b1c1f; --txt:#f5f5f7; --sub:#c9c9cf;
-      --prim:#ffd100; --accent:#ff4d00; --ok:#22c55e; --rad:18px; --gap:14px;
+      --bg:#0f0f10;--card:#151618;--card2:#1b1c1f;--txt:#f5f5f7;--sub:#c9c9cf;--prim:#ffd100;--accent:#ff4d00;--gap:14px;--rad:16px;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:var(--txt);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif}
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{background:var(--bg);color:var(--txt);font-family:system-ui,Roboto,Arial,sans-serif;line-height:1.5}
     img{max-width:100%;display:block}
-    a{color:inherit;text-decoration:none}
+    h1,h2{font-weight:700}
 
-    /* Layout */
     .container{max-width:1100px;margin:auto;padding:24px}
-    .section{margin:28px 0}
-    h1,h2{margin:0 0 12px}
-    h1{font-size:clamp(22px,3.5vw,34px)}
-    h2{font-size:clamp(18px,2.6vw,26px)}
-    p{margin:0;color:var(--sub)}
 
     /* Header */
-    .header{background:linear-gradient(180deg,#181a1f,transparent)}
-    .header-wrap{display:flex;align-items:center;gap:16px}
-    .logo{width:64px;height:64px;border-radius:12px;object-fit:cover}
-    .tagline{margin-top:4px}
+    .header{display:flex;align-items:center;gap:14px;margin-bottom:28px}
+    .header img{width:70px;height:70px;border-radius:14px}
+    .header h1{font-size:clamp(24px,3.5vw,34px)}
+    .header p{color:var(--sub)}
 
     /* Horários */
-    .hours{background:var(--card);border-radius:var(--rad);padding:16px}
+    .hours{background:var(--card);border-radius:var(--rad);padding:16px;margin-bottom:30px}
     .hours-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:var(--gap)}
-    .hour{background:var(--card-2);padding:12px;border-radius:12px}
-    .hour .day{color:var(--prim);font-weight:600;display:block;margin-bottom:4px}
+    .hour{background:var(--card2);padding:10px;border-radius:12px}
+    .day{color:var(--prim);font-weight:600;display:block;margin-bottom:4px}
 
-    /* Promoções / Carrossel */
-    .promo{background:var(--card);border-radius:var(--rad);padding:16px}
-    .promo-head{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:8px;margin-bottom:12px}
-    .count{font-variant-numeric:tabular-nums;background:#22252b;border:1px solid #2a2d34;padding:6px 10px;border-radius:10px}
-    .carousel{position:relative;border-radius:14px;overflow:hidden;background:#0c0d0f}
-    .slides{display:grid}
-    .slide{grid-area:1/1;display:none}
+    /* Promoções */
+    .promo{background:var(--card);border-radius:var(--rad);padding:16px;margin-bottom:30px}
+    .promo h2{margin-bottom:6px}
+    .promo p{color:var(--sub);margin-bottom:10px}
+
+    /* Faixa amarela */
+    .countdown-banner{background:var(--prim);color:#111;font-weight:800;text-align:center;font-size:22px;padding:12px 10px;border-radius:10px;animation:pulse 2s infinite}
+    @keyframes pulse{0%{filter:brightness(100%)}50%{filter:brightness(125%)}100%{filter:brightness(100%)}}
+
+    /* Carrossel */
+    .carousel{position:relative;border-radius:14px;overflow:hidden;margin-top:20px}
+    .slide{display:none;width:100%}
     .slide.active{display:block}
-    .c-btn{position:absolute;top:50%;transform:translateY(-50%);border:0;background:rgba(0,0,0,.45);color:#fff;font-size:18px;padding:10px 12px;border-radius:999px;cursor:pointer}
-    .c-btn:hover{background:rgba(0,0,0,.65)}
-    .c-prev{left:8px}
-    .c-next{right:8px}
+    .c-btn{position:absolute;top:50%;transform:translateY(-50%);border:0;background:rgba(0,0,0,.5);color:#fff;font-size:20px;padding:8px 12px;border-radius:50%;cursor:pointer}
+    .c-prev{left:10px}.c-next{right:10px}
 
-    /* Grade de produtos */
+    /* Grade */
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:var(--gap)}
-    .card{background:var(--card);border:1px solid #202226;border-radius:16px;padding:14px}
+    .card{background:var(--card);border:1px solid #202226;border-radius:var(--rad);padding:14px}
     .price{color:var(--prim);font-weight:700}
-    .old{color:#888;text-decoration:line-through;margin-right:6px}
-    .desc{color:var(--sub);margin-top:6px;font-size:14px}
+    .old{text-decoration:line-through;color:#777;margin-right:6px}
 
-    /* Bebidas (garante que TODAS aparecem) */
-    .drinks .grid .card{display:flex;flex-direction:column;gap:4px}
+    /* Bebidas */
+    .drinks .card{display:flex;flex-direction:column;gap:4px}
 
-    /* Rodapé / Endereço */
-    .footer{margin:28px 0 80px}
-    .loc{background:var(--card);border:1px solid #202226;border-radius:16px;padding:16px;display:grid;gap:10px}
-    .loc a.btn{justify-self:start;background:var(--prim);color:#111;font-weight:700;padding:10px 14px;border-radius:12px}
+    /* Rodapé */
+    .footer{margin-top:40px;background:var(--card);padding:18px;border-radius:var(--rad)}
+    .footer h2{margin-bottom:6px}
+    .footer a{display:inline-block;background:var(--prim);color:#111;padding:8px 14px;border-radius:10px;font-weight:700;margin-top:8px}
 
-    /* Botão flutuante WhatsApp */
-    .wa-fab{position:fixed;right:16px;bottom:16px;background:#25d366;color:#fff;border-radius:999px;padding:14px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.35);z-index:40}
+    /* Botão WhatsApp flutuante */
+    .wa-fab{position:fixed;right:16px;bottom:16px;background:#25d366;color:#fff;border-radius:50px;padding:14px 18px;font-weight:700;box-shadow:0 8px 25px rgba(0,0,0,.3);z-index:99}
+    .wa-fab:hover{background:#1eb15a}
 
-    /* Responsivo */
-    @media (max-width:520px){
-      .grid{grid-template-columns:1fr 1fr}
-      .hours-grid{grid-template-columns:1fr}
-    }
+    @media(max-width:520px){.grid{grid-template-columns:1fr 1fr}}
   </style></head>
 <body>
-  <div class="container"><!-- HEADER -->
-<header class="header section">
-  <div class="header-wrap">
-    <img class="logo" src="logo.png" alt="DFL - Da Família Lanches"/>
-    <div>
-      <h1>Da Família Lanches</h1>
-      <p class="tagline">Hambúrgueres Artesanais e Deliciosos</p>
-    </div>
-  </div>
-</header>
-
-<!-- HORÁRIOS -->
-<section class="hours section">
+  <div class="container">
+    <!-- Header -->
+    <div class="header">
+      <img src="logo.png" alt="DFL Logo"/>
+      <div>
+        <h1>Da Família Lanches</h1>
+        <p>Hambúrgueres Artesanais e Deliciosos</p>
+      </div>
+    </div><!-- Horários -->
+<section class="hours">
   <h2>Horário de Funcionamento</h2>
   <div class="hours-grid" style="margin-top:10px">
     <div class="hour"><span class="day">Segunda a Quinta</span><span>18h00 – 23h15</span></div>
@@ -91,64 +80,24 @@
   </div>
 </section>
 
-<!-- PROMOÇÕES / CARROSSEL -->
-<section class="promo section">
-  <div class="promo-head">
-    <div>
-      <h2>Confira as Promoções de Hoje</h2>
-      <p>Estoque limitado • Poucas unidades disponíveis</p>
-    </div>
-    <div class="count">Encerra em <span id="timer">00:00:00</span></div>
-  </div>
+<!-- Promoções -->
+<section class="promo">
+  <h2>Confira as Promoções de Hoje</h2>
+  <p>Estoque limitado • Poucas unidades disponíveis</p>
+
+  <div class="countdown-banner">⚡ Últimas horas! TERMINA EM <span id="timer">00:00:00</span></div>
 
   <div class="carousel">
-    <div class="slides" id="slides">
-      <img class="slide active" src="promo1.jpg" alt="2 Purizin + 1 Fanta 1L" data-wa="https://wa.me/5534999999999?text=Quero%20a%20promo%202%20Purizin%20%2B%20Fanta%201L"/>
-      <img class="slide" src="promo2.jpg" alt="Combo Casal Artesanal" data-wa="https://wa.me/5534999999999?text=Quero%20o%20Combo%20Casal%20Artesanal"/>
-      <img class="slide" src="promo3.jpg" alt="Combo Família Tradicional" data-wa="https://wa.me/5534999999999?text=Quero%20o%20Combo%20Fam%C3%ADlia%20Tradicional"/>
-    </div>
-    <button class="c-btn c-prev" aria-label="Anterior">◀</button>
-    <button class="c-btn c-next" aria-label="Próxima">▶</button>
+    <img src="promo1.jpg" class="slide active" alt="Promoção 1" data-wa="https://wa.me/5534997178336?text=Quero%20a%20promo%C3%A7%C3%A3o%202%20Purizin!"/>
+    <img src="promo2.jpg" class="slide" alt="Promoção 2" data-wa="https://wa.me/5534997178336?text=Gostei%20do%20Combo%20Casal%20Artesanal!"/>
+    <img src="promo3.jpg" class="slide" alt="Promoção 3" data-wa="https://wa.me/5534997178336?text=Quero%20o%20Combo%20Fam%C3%ADlia%20Tradicional!"/>
+    <button class="c-btn c-prev">◀</button>
+    <button class="c-btn c-next">▶</button>
   </div>
 </section>
 
-<!-- TRADICIONAIS -->
-<section class="section">
-  <h2>Hambúrgueres Tradicionais</h2>
-  <div class="grid" style="margin-top:10px">
-    <div class="card"><strong>BÃO</strong><div class="price">R$ 11,00</div><div class="desc">Pão, hambúrguer, alface, tomate, presunto e mussarela</div></div>
-    <div class="card"><strong>UAI</strong><div class="price">R$ 13,00</div><div class="desc">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela</div></div>
-    <div class="card"><strong>TREM</strong><div class="price">R$ 14,00</div><div class="desc">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela</div></div>
-    <div class="card"><strong>CADIM</strong><div class="price">R$ 17,00</div><div class="desc">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</div></div>
-    <div class="card"><strong>ARMARIA</strong><div class="price">R$ 18,00</div><div class="desc">Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha e mussarela</div></div>
-    <div class="card"><strong>BITELA</strong><div class="price">R$ 22,00</div><div class="desc">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</div></div>
-    <div class="card"><strong>APRUMA</strong><div class="price">R$ 25,00</div><div class="desc">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</div></div>
-  </div>
-</section>
-
-<!-- ARTESANAIS -->
-<section class="section">
-  <h2>Hambúrgueres Artesanais</h2>
-  <div class="grid" style="margin-top:10px">
-    <div class="card"><strong>PELEJA</strong><div class="price">R$ 26,00</div><div class="desc">Pão, alface, tomate, milho, bacon, batata palha, hambúrguer artesanal 120g, filé frango, presunto e mussarela</div></div>
-    <div class="card"><strong>TUDIBOM</strong><div class="price">R$ 28,50</div><div class="desc">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé frango, presunto e mussarela</div></div>
-    <div class="card"><strong>CUSTOSO</strong><div class="price">R$ 31,00</div><div class="desc">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé frango, cheddar cremoso e presunto</div></div>
-  </div>
-</section>
-
-<!-- COMBOS -->
-<section class="section">
-  <h2>Combos</h2>
-  <div class="grid" style="margin-top:10px">
-    <div class="card"><strong>Combo Casal (Tradicional)</strong><div><span class="old">R$ 39,99</span><span class="price">R$ 34,99</span></div><div class="desc">2 Burger Trem + 1 Fanta 1L</div></div>
-    <div class="card"><strong>Combo Casal (Artesanal)</strong><div><span class="old">R$ 64,99</span><span class="price">R$ 54,99</span></div><div class="desc">2 Burger Peleja + 1 Fanta 1L</div></div>
-    <div class="card"><strong>Combo Família (Tradicional)</strong><div><span class="old">R$ 79,99</span><span class="price">R$ 59,99</span></div><div class="desc">4 Burger Trem + 1 Kuat 2L</div></div>
-    <div class="card"><strong>Combo Família (Artesanal)</strong><div><span class="old">R$ 106,99</span><span class="price">R$ 89,99</span></div><div class="desc">4 Burger Peleja + 1 Coca 2L</div></div>
-  </div>
-</section>
-
-<!-- BEBIDAS (RESTAURO COMPLETO) -->
-<section class="section drinks">
+<!-- Bebidas -->
+<section class="drinks">
   <h2>Bebidas</h2>
   <div class="grid" style="margin-top:10px">
     <div class="card"><strong>Coca-Cola 200ml</strong><div class="price">R$ 4,00</div></div>
@@ -156,7 +105,6 @@
     <div class="card"><strong>Fanta Laranja 350ml</strong><div class="price">R$ 5,00</div></div>
     <div class="card"><strong>Guaraná Antarctica 350ml</strong><div class="price">R$ 5,00</div></div>
     <div class="card"><strong>Sprite 350ml</strong><div class="price">R$ 5,00</div></div>
-    <div class="card"><strong>Itubaína 350ml</strong><div class="price">R$ 4,50</div></div>
     <div class="card"><strong>Kuat 2L</strong><div class="price">R$ 10,00</div></div>
     <div class="card"><strong>Fanta 2L</strong><div class="price">R$ 10,00</div></div>
     <div class="card"><strong>Coca-Cola 2L</strong><div class="price">R$ 12,00</div></div>
@@ -164,56 +112,45 @@
   </div>
 </section>
 
-<!-- ENDEREÇO / CONTATO (com botão Google Maps) -->
+<!-- Rodapé -->
 <footer class="footer">
-  <div class="loc">
-    <div>
-      <h2>Onde estamos</h2>
-      <p>Patos de Minas — Atendimento delivery e retirada.</p>
-    </div>
-    <a class="btn" href="https://maps.google.com/?q=Da%20Fam%C3%ADlia%20Lanches%20Patos%20de%20Minas" target="_blank" rel="noopener">Abrir no Google Maps</a>
-    <p style="margin-top:6px">© 2025 Da Família Lanches — Você faz parte disso!</p>
-  </div>
+  <h2>Onde estamos</h2>
+  <p>Patos de Minas — Atendimento delivery e retirada.</p>
+  <a href="https://maps.google.com/?q=Da%20Fam%C3%ADlia%20Lanches%20Patos%20de%20Minas" target="_blank">Abrir no Google Maps</a>
+  <p style="margin-top:6px">© 2025 Da Família Lanches — Você faz parte disso!</p>
 </footer>
 
-  </div>  <!-- Botão flutuante WhatsApp (troque o número abaixo pelo seu) --><a class="wa-fab" href="https://wa.me/5534999999999?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido!" target="_blank" aria-label="Fazer pedido no WhatsApp">Pedir no WhatsApp</a>
+  </div>  <!-- Botão flutuante WhatsApp --><a href="https://wa.me/5534997178336?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido!" class="wa-fab" target="_blank">💬 Pedir no WhatsApp</a>
 
-  <!-- ===== JS EMBUTIDO (carrossel + clique + timer) ===== -->  <script>
-    // Timer simples (1h)
-    (function(){
-      const el = document.getElementById('timer');
-      let t = 3600; // 1h
-      setInterval(()=>{
-        const h = String(Math.floor(t/3600)).padStart(2,'0');
-        const m = String(Math.floor((t%3600)/60)).padStart(2,'0');
-        const s = String(t%60).padStart(2,'0');
-        el.textContent = `${h}:${m}:${s}`;
-        t = (t-1+3601)%3601;
-      },1000);
-    })();
-
-    // Carrossel: setas + clique abre WhatsApp
-    (function(){
-      const slides = Array.from(document.querySelectorAll('.slide'));
-      const prev = document.querySelector('.c-prev');
-      const next = document.querySelector('.c-next');
-      let i = 0;
-      function show(n){
-        slides.forEach(s=>s.classList.remove('active'));
-        slides[n].classList.add('active');
+  <!-- ===== JS EMBUTIDO ===== -->  <script>
+    // Contagem regressiva até 23:59:59
+    function startCountdown(){
+      const timerEl=document.getElementById('timer');
+      function update(){
+        const now=new Date();
+        const end=new Date();
+        end.setHours(23,59,59,999);
+        let diff=(end-now)/1000;
+        if(diff<0) diff=0;
+        const h=String(Math.floor(diff/3600)).padStart(2,'0');
+        const m=String(Math.floor((diff%3600)/60)).padStart(2,'0');
+        const s=String(Math.floor(diff%60)).padStart(2,'0');
+        timerEl.textContent=`${h}:${m}:${s}`;
       }
-      function go(dir){ i = (i + dir + slides.length) % slides.length; show(i); }
-      prev.addEventListener('click',()=>go(-1));
-      next.addEventListener('click',()=>go(1));
-      slides.forEach(s=> s.addEventListener('click',()=>{
-        const url = s.getAttribute('data-wa');
-        if(url) window.open(url,'_blank');
-      }));
-      // deslize no celular
-      let x0=null; const touchStart=e=>x0=(e.touches?e.touches[0].clientX:e.clientX),
-            touchEnd=e=>{ if(x0===null) return; const x1=(e.changedTouches?e.changedTouches[0].clientX:e.clientX); const dx=x1-x0; if(Math.abs(dx)>40) go(dx<0?1:-1); x0=null; };
-      const box=document.querySelector('.carousel');
-      box.addEventListener('touchstart',touchStart); box.addEventListener('touchend',touchEnd);
-    })();
+      update();
+      setInterval(update,1000);
+    }
+    startCountdown();
+
+    // Carrossel simples com clique
+    const slides=document.querySelectorAll('.slide');
+    const prev=document.querySelector('.c-prev');
+    const next=document.querySelector('.c-next');
+    let idx=0;
+    function show(i){slides.forEach(s=>s.classList.remove('active'));slides[i].classList.add('active');}
+    function go(d){idx=(idx+d+slides.length)%slides.length;show(idx);}
+    prev.addEventListener('click',()=>go(-1));
+    next.addEventListener('click',()=>go(1));
+    slides.forEach(s=>s.addEventListener('click',()=>{const wa=s.dataset.wa;if(wa)window.open(wa,'_blank');}));
   </script></body>
 </html>
